# yafdt

./: .gitignore  Cargo.toml  LICENSE  PROJECT_STATUS.md  ROADMAP.md  TODO.md  config.json  readme.md
backend/: Cargo.toml  env.template
backend/src/: business_logic.rs  error.rs  handler.rs  main.rs  models.rs
frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/types/src/routes/: proxy+page.server.ts
frontend/src/: app.html
frontend/src/lib/: apiService.ts  models.ts
frontend/src/lib/components/: Footer.svelte  Header.svelte  LoadingSpinner.svelte  Number.svelte  Path.svelte
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/: assets.rs  cli.rs  gui.rs  main.rs  model.rs  move_files.rs  prefs.rs  scan.rs  tests.rs  web.rs
src/static/: index.html
