[package]
name = "dupe_finder"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2"
md5 = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
webbrowser = "1"
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
dirs = "5"
eframe = { version = "0.33", optional = true }
egui = { version = "0.33", optional = true }

[features]
default = []
gui = ["dep:eframe", "dep:egui"]