[package]
name = "yafdv2"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.0"
sha2 = "0.10.8"
axum = { version = "0.8.1", features = ["json", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde_json = { version = "1.0.1" }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.0"
tower-http = { version = "0.6.2", features = ["cors"] }
